2014-08-05 Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonpress):  Remove extraneous event_reset.

2014-08-02 Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_colorspec):  Apply user-defined line colors
	to text color also.
	Bug #1452

	src/misc.c src/save.c src/set.c src/term.c src/term_api.h:
	Store custom dashtype string as a constant length character array
	rather than a dynamically allocated string.  This fixes memory
	leakage that happened whenever a linetype using dashes was discarded.

2014-08-01 Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonpress):  Trap mouse button click on
	press rather than on release so that "pause mouse {button1|any}"
	takes precedence over a key binding to the mouse button.
	Bugfix

2014-07-30 Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm:  Remove misleading mention of -noevents.  This is a
	command line option for gnuplot_x11, not for gnuplot itself.

	* src/datafile.c docs/gnuplot.doc demo/heatmaps.dem:
	New text input matrix keywords `columnheaders` and `rowheaders`.
	These handle reading matrix data from a csv file in which the first
	row and/or column contains labels rather than data.

	* src/eval.c (update_plot_bounds):  Provide a user-visible copy of
	the current terminal scale (oversampling, etc) as GPVAL_TERM_SCALE.
	Bug #1291

2014-07-28 Allin Cottrell  <cottrell@wfu.edu>

	* src/syscfg.h:  Report 32/64 bit Windows build in version string

2014-07-28 Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c:  Do not pass a linewidth of zero to the
	cairo library.  The linewidth of LT_AXIS is now set in the core code,
	do not further reduce it in gp_cairo_stroke().

2014-07-25 Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Scale x11 dashlength with linewidth.

2014-07-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/mouse.c src/mouse.h src/set.c src/show.c docs/gnuplot.doc: